src/test/ui/wf/wf-trait-fn-where-clause.stderr
error[E0277]: the trait bound `Self: Eq` is not satisfied
  --> $DIR/wf-trait-fn-where-clause.rs:10:49
   |
LL |     fn bar(&self) where Self: Sized, Bar<Self>: Copy;
   |                                                 ^^^^ the trait `Eq` is not implemented for `Self`
   |
note: required by a bound in `Bar`
  --> $DIR/wf-trait-fn-where-clause.rs:7:14
   |
LL | struct Bar<T:Eq+?Sized> { value: Box<T> }
   |              ^^ required by this bound in `Bar`
help: consider further restricting `Self`
   |
LL |     fn bar(&self) where Self: Sized, Bar<Self>: Copy, Self: Eq;
   |                                                     ++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
